<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imagem_cadastro"
        android:src="@drawable/menu"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/imagem_paciente" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dados_paciente"
        android:id="@+id/dados_paciente"
        android:layout_gravity="center_horizontal"
        android:textColor="#696969"
        android:textStyle="bold"
        android:background="#b0b0b0"
        android:gravity="center" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/cpf_cadastro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cpf_cadastro"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:enabled="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nome_cadastro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome_cadastro"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:enabled="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/telefone_cadastro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefone_cadastro"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:enabled="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/doenca_cadastro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/doenca_cadastro"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:enabled="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/medicacao_cadastro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/medicacao_cadastro"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:enabled="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/data_cadastro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/data_cadastro"
                    android:inputType="date"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:enabled="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/valor_cadastro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valor_cadastro"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:enabled="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/detalhes_cadastro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/detalhes_cadastro"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:enabled="false" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>