<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_above="@+id/relativeLayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/imagem_nome"
            android:src="@drawable/contato" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/nome_paciente"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/imageView"
            android:textColor="#696969"
            android:maxLines="1"
            android:lines="1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nome_paciente"
            android:layout_alignParentStart="true"
            android:id="@+id/relativeLayout">

            <Button
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:text="@string/deletar"
                android:id="@+id/btn_deletar_paciente"
                android:onClick="editar_paciente"
                android:textStyle="bold"
                android:textColor="#696969"
                android:drawableLeft="@drawable/excluir"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="3dp" />

            <Button
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:text="@string/editar"
                android:id="@+id/btn_editar_paciente"
                android:layout_marginLeft="20dp"
                android:onClick="editar_paciente"
                android:textStyle="bold"
                android:textColor="#696969"
                android:drawableLeft="@drawable/editar"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:text="@string/visualizar"
                android:id="@+id/btn_visualizar_paciente"
                android:layout_marginLeft="3dp"
                android:textColor="#696969"
                android:drawableLeft="@drawable/visualizar"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:onClick="visualizar_paciente" />
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView"
            android:layout_below="@+id/relativeLayout"
            android:layout_alignParentStart="true"
            android:background="#b0b0b0" />

    </RelativeLayout>

</LinearLayout>